fix main content overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,8 @@ main {
 main section {
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    height: auto;
+    overflow: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
